feat(auth): Enhance JWT auth security and token refresh mechanism
- Store accessToken in JS memory
- On token expiry or page reload, request new JWT via /auth/refresh
- Store refreshToken in HttpOnly, Secure, SameSite=Strict cookie
- Enforce CSRF token check on /auth/refresh endpoint
- Implement /auth/csrf endpoint to issue CSRF tokens

--- a/deployment/kubernetes/configmap/direct-deal-gateway-configmap.yml
+++ b/deployment/kubernetes/configmap/direct-deal-gateway-configmap.yml
@@ -74,7 +74,7 @@ data:
             - id: auth-service
               uri: http://account-service:8080/
               predicates:
-              - Path=/api/v1/auth/login
+              - Path=/api/v1/auth/**
               filters:
               - RewritePath=/api/v1(?<segment>/?.*), $\{segment} 
             - id: sale-service-item
