--- a/direct-deal-ui/directdeal-dev.conf
+++ b/direct-deal-ui/directdeal-dev.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80;
+    listen 9000;
     #server_name example.com;  # actual domain name or IP
 
     # Proxy API requests to backend server
@@ -13,8 +13,11 @@ server {
     
     # Serve frontend static files
     location / {
-        root /usr/share/nginx/html;   # path where Vue.js dist folder is copied
-        index index.html;
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://localhost:8086;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 }
