--- a/mysql/Dockerfile.k3d
+++ b/mysql/Dockerfile.k3d
@@ -1,4 +1,4 @@
-FROM mysql:8.0.41
+FROM localhost:5000/mysql:8.0.41
 LABEL image.authors="Jeon, Cheol"
 ADD direct-deal-my.cnf /etc/mysql/conf.d/custom.cnf
 ADD direct-deal-init.sql /docker-entrypoint-initdb.d/direct-deal-init.sql
